Revert "fix(style): adding additional queries to specifically target safari on iOS"
This reverts commit 993e84e3570d7e04fad4ebd154693aae81c17947.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,15 +517,10 @@ h1 {
 }
 }
 
-/* For iOS */
+/* For Safari on iOS */
 @supports (-webkit-touch-callout: none) {
-/* For Safari */
-	@media not all and (min-resolution:.001dpcm) { 
-    	@media {
 /*Using universal selector to ensure content doesn't exceed screen size*/
-			.img_scale:active img, .img_scale:focus img {
-				transform: none;
-}
-}
+.img_scale:active img, .img_scale:focus img {
+	transform: none;
 }
 }
